kubernetes/apps/selfhosted/cruise-caller/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cruise-caller-external
  namespace: selfhosted
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "cruise-caller.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cruise-caller
                port:
                  name: http
  tls:
    - hosts:
        - "cruise-caller.${SECRET_DOMAIN}"
